--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.carolina_coffee">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,18 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Carolina_Coffee">
-        <activity
-            android:name=".Login"
-            android:exported="false" />
-        <activity
-            android:name=".Register"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".Login"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity
             android:name=".MainMenuActivity15"
             android:exported="true" />
@@ -49,9 +41,6 @@
             android:name=".ProfileActivity8"
             android:exported="true" />
         <activity
-            android:name=".ProfileActivity7"
-            android:exported="true" />
-        <activity
             android:name=".WalletActivity7"
             android:exported="true" />
         <activity
@@ -73,12 +62,7 @@
         <activity
             android:name=".LoginActivity2"
             android:exported="true" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".Register"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
