--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Carolina_Coffee">
-        <activity android:name=".Login"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".Profile"
+            android:exported="false" />
+        <activity android:name=".Login" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".MainMenuActivity15"
             android:exported="true" />
@@ -62,7 +65,8 @@
         <activity
             android:name=".LoginActivity2"
             android:exported="true" />
-        <activity android:name=".Register"
+        <activity
+            android:name=".Register"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
