Correction made toward file simplification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carolina_Coffee">
         <activity
-            android:name=".RewardsActivity2"
+            android:name=".RewardsActivity"
             android:exported="false" />
         <activity
             android:name=".Profile"
@@ -20,53 +20,7 @@
         <activity android:name=".Login" />
         <activity android:name=".MainActivity" />
         <activity
-            android:name=".MainMenuActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MenuActivity"
-            android:exported="true" />
-        <activity
-            android:name=".NutritionActivity"
-            android:exported="true" />
-        <activity
-            android:name=".PaymentActivity13"
-            android:exported="true" />
-        <activity
-            android:name=".CheckoutActivity"
-            android:exported="true" />
-        <activity
-            android:name=".SavedOrdersActivity11"
-            android:exported="true" />
-        <activity
-            android:name=".PromptionsActivity10"
-            android:exported="true" />
-        <activity
-            android:name=".RewardsActivity9"
-            android:exported="true" />
-        <activity
-            android:name=".ProfileActivity8"
-            android:exported="true" />
-        <activity
-            android:name=".WalletActivity7"
-            android:exported="true" />
-        <activity
-            android:name=".PurchaseHistoryActivity6"
-            android:exported="true" />
-        <activity
-            android:name=".SettingsActivity"
-            android:exported="true"
-            android:label="@string/title_activity_settings" />
-        <activity
-            android:name=".InboxActivity5"
-            android:exported="true" />
-        <activity
-            android:name=".HomeActivity4"
-            android:exported="true" />
-        <activity
-            android:name=".SignUpActivity3"
-            android:exported="true" />
-        <activity
-            android:name=".LoginActivity2"
+            android:name=".PaymentActivity"
             android:exported="true" />
         <activity
             android:name=".Register"
