--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carolina_Coffee">
         <activity
+            android:name=".Menu"
+            android:exported="false" />
+        <activity
             android:name=".RewardsActivity"
             android:exported="false" />
         <activity
