-Renamed Files for organization -Added Main Important page files. (Based off Figma)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carolina_Coffee">
         <activity
-            android:name=".RewardsActivity"
+            android:name=".CartPageActivity"
             android:exported="false" />
         <activity
-            android:name=".Profile"
+            android:name=".OrderMenuPageActivity"
             android:exported="false" />
-        <activity android:name=".Login" />
+        <activity
+            android:name=".AppSettingsPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CustomerSupportPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SavedOrdersPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InboxPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RewardsPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfilePageActivity"
+            android:exported="false" />
+        <activity android:name=".LoginPageAtivity" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".PaymentActivity"
             android:exported="true" />
         <activity
-            android:name=".Register"
+            android:name=".RegisterPageActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
