- Big update - Added ability to change password with firebase - Added ability to change users name, email, and phone with firebase - Added a new edit profile page ( EditProfileActivity.class ) - Major overhaul on activity_setting_page.xml and class. - Added new font style (sofia_regular) - and other misc changes throughout code everywhere else.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carolina_Coffee">
         <activity
+            android:name=".EditProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".CartPageActivity"
             android:exported="false" />
         <activity
