--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.carolina_coffee">
+    package="com.example.carolina_coffee"
+    xmlns:tools = "http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Carolina Coffee"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Carolina_Coffee">
+        android:theme="@style/Theme.Carolina_Coffee"
+        tools:replace="android:label">
         <activity
             android:name=".HistoryPageActivity"
             android:exported="false" />
