--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,14 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+        // Import the BoM for the Firebase platform
+        implementation platform('com.google.firebase:firebase-bom:29.0.0')
+
+        // Declare the dependencies for the In-App Messaging and Analytics libraries
+        // When using the BoM, you don't specify versions in Firebase library dependencies
+        implementation 'com.google.firebase:firebase-inappmessaging-display'
+        implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-core'
 
     implementation 'com.craftman.cardform:cardform:0.0.2'
 
