--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="Carolina Coffee"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Carolina_Coffee"
+        android:theme="@style/splashScreenTheme"
         tools:replace="android:label">
         <activity
             android:name=".HistoryPageActivity"
