--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core'
 
     implementation 'com.craftman.cardform:cardform:0.0.2'
+    implementation 'com.google.android.material:material:1.2.0'
 
 
 }
