Added functioning Menu, Basic drinks are added to Database, Will finalize drink customization tomorrow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".OrderMenuPageActivity"
             android:exported="false" />
         <activity
+            android:name=".MenuPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".AppSettingsPageActivity"
             android:exported="false" />
         <activity
