--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-core'
 
     implementation 'com.craftman.cardform:cardform:0.0.2'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.firebase:firebase-core:20.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'info.hoang8f:fbutton:1.0.5'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.android.support:cardview-v7'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.firebaseui:firebase-ui-database:6.0.2'
+
 
 
 }
