--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,6 @@ dependencies {
         // Declare the dependencies for the In-App Messaging and Analytics libraries
         // When using the BoM, you don't specify versions in Firebase library dependencies
         implementation 'com.google.firebase:firebase-inappmessaging-display'
-        implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-core'
 
     implementation 'com.craftman.cardform:cardform:0.0.2'
@@ -67,6 +66,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:6.0.2'
+    implementation 'com.google.android.gms:play-services-base:17.5.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
 
 
