--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity
             android:name=".ProfilePageActivity"
             android:exported="false" />
-        <activity android:name=".LoginPageAtivity" />
+        <activity android:name=".LoginPageActivity" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".PaymentActivity"
