--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.5.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
+    implementation 'androidx.biometric:biometric:1.1.0'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
 
 
 }
