UNFINISHED Unfinished Payment methods. Will crash on edit payment methods page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:exported="false" />
         <activity
             android:name=".PaymentMethod_1_Activity"
+            android:windowSoftInputMode="adjustPan"
+
             android:exported="false" />
         <activity
             android:name=".EditPaymentPlansActivity"
