Fixing gradle for testing - deprecated code no longer in use, shut down.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,18 @@ android {
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
+
         // but continue the build even when errors are found:
         abortOnError false
+    }
+    android {
+        testOptions {
+            execution 'ANDROIDX_TEST_ORCHESTRATOR'
+
+            unitTests.all {
+                useJUnitPlatform() // <--- this is the important part
+            }
+        }
     }
 }
 
