--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
     compileSdk 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.carolina_coffee"
@@ -14,7 +15,6 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -33,15 +33,18 @@ android {
         viewBinding true
     }
     lintOptions {
-        checkReleaseBuilds false
+       // checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
 
         // but continue the build even when errors are found:
-        abortOnError false
+    abortOnError false
     }
 }
 
 dependencies {
+
+    androidTestImplementation 'androidx.test:core:1.4.1-alpha04'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4-alpha04' // deprecated AndroidUnitTest4
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -57,7 +60,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
+   // androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
         // Import the BoM for the Firebase platform
         implementation platform('com.google.firebase:firebase-bom:29.0.0')
 
@@ -83,10 +90,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha03'
-    androidTestImplementation 'com.android.support:support-annotations:24.0.0'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha04'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
 
 }
