--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,8 @@
             android:exported="false" />
         <activity
             android:name=".PaymentMethod_1_Activity"
-            android:windowSoftInputMode="adjustPan"
-
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".EditPaymentPlansActivity"
             android:exported="false" />
