*Big Update* - Implemented working rewards system.    - rewards are kept track with each purchase made. Several system checks to determine if reward is applicable and redeemable.    - Rewards are also kept track of on firebase.    - Receipt reflects price reduction via using rewards. - Minor user interface fixes    - History page on main activity "back buttons" work correctly.    - Several other misc changes (i forget, bad memory, sorry)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/splashScreenTheme"
         tools:replace="android:label">
         <activity
+            android:name=".MenuPageActivity_Rewards"
+            android:exported="false" />
+        <activity
+            android:name=".HistoryPageActivity2"
+            android:exported="false" />
+        <activity
             android:name=".PaymentMethod_2_Activity"
             android:exported="false" />
         <activity
